Integrate Supabase auth with login screen

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@
 API_BASE_URL=http://localhost:8000
 DEFAULT_USER_ID=-1
 
+# Supabase Configuration
+SUPABASE_URL=https://your-supabase-url.supabase.co
+SUPABASE_ANON_KEY=your-supabase-anon-key
+
