--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_gen_ai_chat_ui: ^2.3.0
   flutter_dotenv: ^5.1.0
+  supabase_flutter: ^2.3.4
 
 dev_dependencies:
   flutter_test:
