progression check in -- paused at bringing back asset concepts in overview screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,4 +51,5 @@ flutter:
     # Add assets from the images directory to the application.
     - assets/images/
     - assets/icons/
+    - assets/requests/
     - .env
