--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   supabase_flutter: ^2.3.4
   supabase_auth_ui: ^0.5.5
   intl: ^0.19.0
+  audioplayers: ^6.1.0
 
 dev_dependencies:
   flutter_test:
