--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,6 @@ dependencies:
   flutter_svg: ^2.0.10
   provider: ^6.1.2
   webview_flutter: ^4.9.0
-  webview_windows: ^0.4.0
   url_launcher: ^6.3.1
   web_socket_channel: ^3.0.3
   dio: ^5.8.0+1
@@ -34,6 +33,7 @@ dependencies:
   supabase_flutter: ^2.3.4
   supabase_auth_ui: ^0.5.5
   intl: ^0.19.0
+  audioplayers: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -51,4 +51,5 @@ flutter:
     # Add assets from the images directory to the application.
     - assets/images/
     - assets/icons/
+    - assets/requests/
     - .env
