--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = arcane_forge
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.arcaneForge
+PRODUCT_BUNDLE_IDENTIFIER = ai.arcaneforge.arcaneForge
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 arcaneforge.ai. All rights reserved.
