--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "arcaneforge.ai" "\0"
             VALUE "FileDescription", "arcane_forge" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "arcane_forge" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 arcaneforge.ai. All rights reserved." "\0"
             VALUE "OriginalFilename", "arcane_forge.exe" "\0"
             VALUE "ProductName", "arcane_forge" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
