--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   supabase_auth_ui: ^0.5.5
   intl: ^0.19.0
   audioplayers: ^6.1.0
+  archive: ^3.6.1
+  path: ^1.9.0
 
 dev_dependencies:
   flutter_test:
