--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: arcane_forge
-description: "A new Flutter project."
+description: "Arcane Forge: AI-powered desktop assistant for game design, asset generation, and project management."
 
 # Prevent accidental publishing to pub.dev.
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: ^3.5.3
