chore: Update dependencies and enhance web app configuration
- Added new dependencies: checked_yaml, cli_util, flutter_launcher_icons, image, json_annotation, and yaml in pubspec.lock.
- Updated pubspec.yaml to include flutter_launcher_icons with configuration for web.
- Modified web/index.html and web/manifest.json for improved app metadata and branding.
- Updated favicon and icon assets for better visual representation.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
@@ -58,3 +59,11 @@ flutter:
     - assets/icons/
     - assets/requests/
     - .env
+
+# Configuration for flutter_launcher_icons
+flutter_launcher_icons:
+  web:
+    generate: true
+    image_path: "assets/images/logo.png"
+    background_color: "#1a1a2e"
+    theme_color: "#9d4edd"
