--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "arcane_forge",
-    "short_name": "arcane_forge",
+    "name": "Arcane Forge",
+    "short_name": "Arcane Forge",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#1a1a2e",
+    "theme_color": "#9d4edd",
+    "description": "Arcane Forge: AI-powered desktop assistant for game design, asset generation, and project management.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
