--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path: ^1.9.0
   package_info_plus: ^8.0.2
   firebase_core: ^3.10.0
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
