fix(web): force refresh in web

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "dart.flutterRunAdditionalArgs": [
     "--dart-define=FLUTTER_ENV=development"
   ],
-  "postman.settings.dotenv-detection-notification-visibility": false
+  "postman.settings.dotenv-detection-notification-visibility": false,
+  "makefile.configureOnOpen": false
 }
