--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_core: ^3.10.0
   carousel_slider: ^5.1.1
   flutter_staggered_grid_view: ^0.7.0
+  go_router: ^14.7.3
+  syncfusion_flutter_pdfviewer: ^28.1.36
 
 dev_dependencies:
   flutter_test:
